@@ -3,8 +3,6 @@ package agh.ics.oop;
 import agh.ics.oop.model.MoveDirections;
 import org.junit.jupiter.api.Test;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -15,7 +13,7 @@ class OptionsParserTest {
     void translateDirectionsWithAllGoodData(){
         String[] args = {"f","r","b","l"};
         List<MoveDirections> directions = OptionsParser.translateDirections(args);
-        assertEquals(new ArrayList<>(Arrays.asList(MoveDirections.FORWARD, MoveDirections.RIGHT,MoveDirections.BACKWARD,MoveDirections.LEFT)),directions);
+        assertEquals(List.of(MoveDirections.FORWARD, MoveDirections.RIGHT,MoveDirections.BACKWARD,MoveDirections.LEFT),directions);
     }
 
 
@@ -23,13 +21,13 @@ class OptionsParserTest {
     void translateDirectionsWithOneBadData(){
         String[] args = {"f","Scooby-Doo","l"};
         List<MoveDirections> directions = OptionsParser.translateDirections(args);
-        assertEquals(new ArrayList<>(Arrays.asList(MoveDirections.FORWARD,MoveDirections.LEFT)),directions);
+        assertEquals(List.of(MoveDirections.FORWARD,MoveDirections.LEFT),directions);
     }
 
     @Test
     void translateDirectionsWithAllBadData(){
         String[] args = {"Krasnal","Scooby-Doo","Kuki","Koszula"};
         List<MoveDirections> directions = OptionsParser.translateDirections(args);
-        assertEquals(new ArrayList<MoveDirections>(), directions);
+        assertEquals(List.of(), directions);
     }
 }
